force-app/main/default/objects/DD_Weightage__mdt/DD_Weightage__mdt.object-meta.xml
<CustomObject>
    <description>It is used to store weightage for Due Dilligence</description>
    <label>DD Weightage</label>
    <pluralLabel>DD Weightages</pluralLabel>
</CustomObject>