force-app/main/default/objects/DD_Weightage__mdt/fields/Assets_Vs_Liability_Weight__c.field-meta.xml
<CustomField>
    <fullName>Assets_Vs_Liability_Weight__c</fullName>
    <label>Assets Vs Liability Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>