force-app/main/default/objects/DD_Weightage__mdt/fields/Company_Established_Weight__c.field-meta.xml
<CustomField>
    <fullName>Company_Established_Weight__c</fullName>
    <label>Company Established Weight%</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>