force-app/main/default/objects/DD_Weightage__mdt/fields/Current_spare_in_stock_Management_Weigh__c.field-meta.xml
<CustomField>
    <fullName>Current_spare_in_stock_Management_Weigh__c</fullName>
    <label>Current spare in stock&amp;Management Weigh%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>