force-app/main/default/objects/DD_Weightage__mdt/fields/Customer_Base_Weight__c.field-meta.xml
<CustomField>
    <fullName>Customer_Base_Weight__c</fullName>
    <label>Customer Base Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>