force-app/main/default/objects/DD_Weightage__mdt/fields/E_bonding_capabilities_Weight__c.field-meta.xml
<CustomField>
    <fullName>E_bonding_capabilities_Weight__c</fullName>
    <label>E-bonding capabilities Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>