force-app/main/default/objects/DD_Weightage__mdt/fields/Employee_Strength_Weight__c.field-meta.xml
<CustomField>
    <fullName>Employee_Strength_Weight__c</fullName>
    <label>Employee Strength Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>