force-app/main/default/objects/DD_Weightage__mdt/fields/Existing_Customer_Recommendation_Weight__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Recommendation_Weight__c</fullName>
    <label>Existing Customer Recommendation Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>