force-app/main/default/objects/DD_Weightage__mdt/fields/Financial_stability_or_Credit_Weight__c.field-meta.xml
<CustomField>
    <fullName>Financial_stability_or_Credit_Weight__c</fullName>
    <label>Financial stability or Credit Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>