force-app/main/default/objects/DD_Weightage__mdt/fields/Future_plan_enhance_the_presence_Weight__c.field-meta.xml
<CustomField>
    <fullName>Future_plan_enhance_the_presence_Weight__c</fullName>
    <label>Future plan enhance the presence Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>