force-app/main/default/objects/DD_Weightage__mdt/fields/Health_Safety_Processes_Weight__c.field-meta.xml
<CustomField>
    <fullName>Health_Safety_Processes_Weight__c</fullName>
    <label>Health &amp; Safety Processes Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>