force-app/main/default/objects/DD_Weightage__mdt/fields/Maintenance_or_break_fix_support_Weight__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_or_break_fix_support_Weight__c</fullName>
    <label>Maintenance or break fix support Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>