force-app/main/default/objects/DD_Weightage__mdt/fields/NBD_Resolution_or_Others_Weight__c.field-meta.xml
<CustomField>
    <fullName>NBD_Resolution_or_Others_Weight__c</fullName>
    <label>NBD Resolution or Others Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>