force-app/main/default/objects/DD_Weightage__mdt/fields/Net_Margin_Growth_for_last_3year_Weight__c.field-meta.xml
<CustomField>
    <fullName>Net_Margin_Growth_for_last_3year_Weight__c</fullName>
    <label>Net Margin Growth for last 3year Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>