force-app/main/default/objects/DD_Weightage__mdt/fields/No_of_Countries_covered_direct_Weight__c.field-meta.xml
<CustomField>
    <fullName>No_of_Countries_covered_direct_Weight__c</fullName>
    <label>No. of Countries covered direct Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>