force-app/main/default/objects/DD_Weightage__mdt/fields/No_of_High_value_customers_Weight__c.field-meta.xml
<CustomField>
    <fullName>No_of_High_value_customers_Weight__c</fullName>
    <label>No. of High value customers Weight%</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>