force-app/main/default/objects/DD_Weightage__mdt/fields/OEM_model_Spare_replacement_Weight__c.field-meta.xml
<CustomField>
    <fullName>OEM_model_Spare_replacement_Weight__c</fullName>
    <label>OEM model/Spare replacement Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>