force-app/main/default/objects/DD_Weightage__mdt/fields/Overall_delivery_capabilities_Weight__c.field-meta.xml
<CustomField>
    <fullName>Overall_delivery_capabilities_Weight__c</fullName>
    <label>Overall delivery capabilities Weight %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>