force-app/main/default/objects/DD_Weightage__mdt/fields/Point_of_presence_Weight__c.field-meta.xml
<CustomField>
    <fullName>Point_of_presence_Weight__c</fullName>
    <label>Point of presence Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>