force-app/main/default/objects/DD_Weightage__mdt/fields/Quality_of_Communication_Document_Weigh__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Communication_Document_Weigh__c</fullName>
    <label>Quality of Communication/Document Weigh%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>