force-app/main/default/objects/DD_Weightage__mdt/fields/Quality_PC_SC_List_Weight__c.field-meta.xml
<CustomField>
    <fullName>Quality_PC_SC_List_Weight__c</fullName>
    <label>Quality/PC/SC List Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>