force-app/main/default/objects/DD_Weightage__mdt/fields/Referral_Customer_feedback_Weight__c.field-meta.xml
<CustomField>
    <fullName>Referral_Customer_feedback_Weight__c</fullName>
    <label>Referral Customer feedback Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>