force-app/main/default/objects/DD_Weightage__mdt/fields/Responsiveness_Weight__c.field-meta.xml
<CustomField>
    <fullName>Responsiveness_Weight__c</fullName>
    <label>Responsiveness Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>