force-app/main/default/objects/DD_Weightage__mdt/fields/Retention_of_the_customer_Weight__c.field-meta.xml
<CustomField>
    <fullName>Retention_of_the_customer_Weight__c</fullName>
    <label>Retention of the customer Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>