force-app/main/default/objects/DD_Weightage__mdt/fields/Revenue_Growth_for_last_3_year_Weight__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth_for_last_3_year_Weight__c</fullName>
    <label>Revenue Growth for last 3 year Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>