force-app/main/default/objects/DD_Weightage__mdt/fields/Skilled_Employees_Certification_Weight_T__c.field-meta.xml
<CustomField>
    <fullName>Skilled_Employees_Certification_Weight_T__c</fullName>
    <inlineHelpText>For Technical Capability</inlineHelpText>
    <label>Skilled Employees/Certification Weight %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>