force-app/main/default/objects/DD_Weightage__mdt/fields/SkilledEmployeesCertificationWeightSD__c.field-meta.xml
<CustomField>
    <fullName>SkilledEmployeesCertificationWeightSD__c</fullName>
    <description>For Service Delivery</description>
    <label>Skilled Employees/Certification Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>