force-app/main/default/objects/DD_Weightage__mdt/fields/Technical_delivery_Matrix_Weight__c.field-meta.xml
<CustomField>
    <fullName>Technical_delivery_Matrix_Weight__c</fullName>
    <label>Technical delivery Matrix Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>