force-app/main/default/objects/DD_Weightage__mdt/fields/Ticketing_tools_process_Weight__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_tools_process_Weight__c</fullName>
    <label>Ticketing tools &amp; process Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>