force-app/main/default/objects/DD_Weightage__mdt/fields/Value_add_innovation_Weight__c.field-meta.xml
<CustomField>
    <fullName>Value_add_innovation_Weight__c</fullName>
    <label>Value add &amp; innovation Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>