force-app/main/default/objects/DD_Weightage__mdt/fields/Warehouse_Management_Weight__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Management_Weight__c</fullName>
    <label>Warehouse Management Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>