force-app/main/default/objects/DD_Weightage__mdt/fields/Warranty_Out_of_warranty_support_Weigh__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Out_of_warranty_support_Weigh__c</fullName>
    <label>Warranty /Out of warranty support Weigh%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>