force-app/main/default/objects/DD_Weightage__mdt/fields/X24x7_call_center_HelpDesk_support_Weigh__c.field-meta.xml
<CustomField>
    <fullName>X24x7_call_center_HelpDesk_support_Weigh__c</fullName>
    <inlineHelpText>24x7 call center/HelpDesk support Weight %</inlineHelpText>
    <label>24x7 call center/HelpDesk support Weight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>