force-app/main/default/objects/DD_Weightage__mdt/fields/X2_hours_Fix_Resolution_Weight__c.field-meta.xml
<CustomField>
    <fullName>X2_hours_Fix_Resolution_Weight__c</fullName>
    <label>2 hours Fix Resolution Weight%</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>